2007-01-02 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: documented #pragma sdcc_hash
	* support/cpp2/sdcpp.c: allow_naked_hash (value of #pragma sdcc_hash)
	  initialized to 0
	* support/cpp2/c-ppoutput.c: fixed warning: no newline at end of file

2007-01-01 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (createDo): backPatchLabels() needs falseLabel in
	empty 'while'-loop to work correctly, see regression test 'while.c'
	* support/regression/tests/while.c: added

2007-01-01 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/libcpp/directives.c, support/cpp2/libcpp/identifiers.c,
	  support/cpp2/libcpp/init.c, support/cpp2/libcpp/sdcpp-opts.c,
	  support/cpp2/libcpp/sdcpp.c:
	  sdcpp specific pragma/directive/option handling moved to sdcpp.c
	* doc/sdccman.lyx: reference to the GCC 4.1.1 CPP Manual
	* support/cpp2/libcpp/mkdeps.c: synchronized with GCC CPP 4.1.1

2006-12-31 Borut Razem <borut.razem AT siol.net>

	* SDCPP synchronized with GCC CPP release version 4.1.1,
	  currently the latest release:
	* support/cpp2/libcpp, support/cpp2/libcpp/include,
	  support/cpp2/libcpp/include/cpp-id-data.h
	  support/cpp2/libiberty/fopen_unlocked.c
	  support/cpp2/libiberty/md5.c
	  support/cpp2/md5.h
	  support/cpp2/opt-functions.awk
	  support/cpp2/opt-gather.awk
	  support/cpp2/optc-gen.awk
	  support/cpp2/opth-gen.awk:
	  added
	* support/cpp2/Makefile.in, support/cpp2/auto-host_vc_in.h,
	  support/cpp2/c-incpath.c, support/cpp2/c-incpath.h,
	  support/cpp2/c-ppoutput.c, support/cpp2/c-pretty-print.c,
	  support/cpp2/c-pretty-print.h, support/cpp2/cppdefault.c,
	  support/cpp2/cppdefault.h, support/cpp2/diagnostic.c,
	  support/cpp2/diagnostic.h, support/cpp2/except.h,
	  support/cpp2/hwint.h, support/cpp2/input.h,
	  support/cpp2/intl.h, support/cpp2/move-if-change,
	  support/cpp2/opts.c, support/cpp2/opts.h,
	  support/cpp2/output.h, support/cpp2/prefix.c,
	  support/cpp2/prefix.h, support/cpp2/pretty-print.c,