@@ -1,3 +1,8 @@
+2007-01-02 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* as/link/hc08/lkihx.c (newArea),
+	* as/link/hc08/lkrloc.c: renamed newArea() to ihxNewArea()
+
 2007-01-02 Borut Razem <borut.razem AT siol.net>
 
 	* doc/sdccman.lyx: documented #pragma sdcc_hash
@@ -116,7 +121,7 @@
 	* configure.in, configure: fixed bug #1538756: configure dies if bison
 	  and flex are not installed
 
-2006-12-21 Maarten Brock <sourceforge.brock AT dse.nl>
+2006-12-29 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/z80/gen.c (assignResultValue): fixed bug when registers overlap,
 	  with this z80 passes printf float test when enabled
